8/16/11 general alignment of molecular dipole with E-field so that it's handled in the base class model
8/16/11 align triatomic molecular dipole with E-field
8/16/11 add bond angle manipulation
8/16/11 fixed transforms in molecular dipole view
8/16/11 fix rendering order of scenegraphs
8/16/11 add bond dipole to model
8/16/11 add partial charge to atom model
8/16/11 restore molecular dipole
# 0.00.09 (55303) Aug 16, 2011
8/16/11 dev version for discussion at Chem meeting
8/16/11 temporarily disable molecular dipole because it's currently incorrect
8/15/11 checked in a version of "real molecules" control that uses PComboBox instead of ComboBoxNode, #2982
8/15/11 tweak molecular dipole interface and fields
8/15/11 make molecule location a simple field, doesn't need to be a Property
8/15/11 intermediate implementation of molecular dipole model and view, not functional yet
8/15/11 generalize 2D isosurface placeholder, add to triatomic molecule
8/15/11 generalize "rotatable molecule" interface, add rotation handler to triatomic molecule
8/15/11 update atom locations when molecule angle or bond angles change
8/15/11 change request: use gray background for periodic table, to provide more contrast between selected and unselected cells
8/15/11 first pass at fleshing out "Three Atoms" tab, only partially functional
8/15/11 change request: make "bond dipoles" on by default in "Two Atoms" tab
# 0.00.08 (55174) Aug 13, 2011
8/12/11 make sure that all PText instances have a call to setFont(PhetFont)
8/12/11 rename various TwoAtoms* classes to Diatomic*
8/12/11 javadoc throughout
8/12/11 fix Reset All so that it resets the molecule in Real Molecules
8/12/11 add currentMolecule property to Real Molecules model, observe in Jmol viewer and periodic table
8/12/11 reuse piccolo-phet's PeriodicTableNode
8/12/11 display element numbers in periodic table placeholder
8/12/11 Jmol: script to return element numbers, for use in periodic table