@@ -15,9 +15,10 @@ DESIGN
 - on/off control for E-field (radio buttons vs switch graphic)
 - decide on final set of real molecules
 - add EN table in "Real Molecules" tab
+- pick a max bond dipole length based on desired max molecular dipole length for triatomic molecule
 
 HIGH
-- clean up canvas layout code in all tabs
+- clean up canvas layout code in all tabs, base layout on molecule location
 - Jmol: adjust initial orientation of NH3, CH3F, CHF3, CH2F2, CHCl3
 - Jmol: write script to get atom xyz global coordinates after rotating in Jmol viewer
 - refine shape of 2D isosurfaces
@@ -26,12 +27,11 @@ HIGH
 MEDIUM
 - delete Bond.deltaElectronegativity
 - rewrite dipole nodes
-- 3 Atoms: partial charge model and view for atom B
+- partial charge model and view for atom B in triatomic molecule (A-B-C)
 - bond dipole max length should be based on bond length, and should be slightly shorter to prevent overlap
 - find out why scenegraph doesn't take up full width in MPCanvas
 - add minor and major ticks to EN control
 - tick marks are a little off horizontally in EN controls, changes when canvas is resized
-- 2/3 Atoms: canvas layout should be based on molecule location
 - in Bond, we are setting partial charges of atoms to the delta EN. This works but isn't accurate, do we need a better model?
 
 LOW
